# silvanus

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: engine.dart  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: api.dart  simple.dart  types.dart
lib/types/: color_option.dart  series_request.dart
lib/widgets/: analysis_tab.dart  key_selector.dart  simple_line_chart.dart  source_select.dart
lib/widgets/charts/: line.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: api.rs  simple.rs  types.rs
rust/src/engine/: engine.rs
rust/src/parser/: csv_parser.rs  mod.rs  serial_parser.rs  test.csv  test_data_generator.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_robot_log.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_robot_log.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
