[package]
name = "rust_lib_silvanus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
rand = "0.10.0"
regex = "1.12.3"
serialport = "4.9.0"
tokio = { version = "1.51.0", features = ["full"] }
tokio-macros = "2.7.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
